--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@million/lint": "^0.0.73",
     "bcrypt": "^5.1.1",
+    "million": "^3.0.6",
     "mongodb": "^6.3.0",
     "mongoose": "^8.1.0",
     "next": "14.1.0",
